Added first page and first api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*" : ["*"],
+      "~src/*" : ["src/*"],
+      "~models/*" : ["src/models/*"],
+      "~components/*" : ["src/components/*"],
+      "~services/*" : ["src/services/*"],
+      "~styles/*" : ["src/styles/*"],
+      "~utils/*" : ["src/utils/*"],
+      "~contexts/*" : ["src/utils/contexts/*"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
