--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@contentful/rich-text-html-renderer": "^15.13.1",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
@@ -19,7 +21,9 @@
     "@mui/material": "^5.10.11",
     "@mui/styled-engine-sc": "^5.10.6",
     "axios": "^1.1.3",
+    "contentful": "^9.2.9",
     "css-mediaquery": "^0.1.2",
+    "graphql": "^16.6.0",
     "memory-cache": "^0.2.0",
     "next": "13.0.0",
     "react": "18.2.0",
