--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/css-mediaquery": "^0.1.1",
+    "@types/memory-cache": "^0.2.2",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
