--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "axios": "^1.1.3",
     "contentful": "^9.2.9",
     "css-mediaquery": "^0.1.2",
+    "googleapis": "^109.0.1",
     "graphql": "^16.6.0",
     "memory-cache": "^0.2.0",
     "next": "13.0.0",
+    "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6"
