--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 API_URL=
+ALLOW_CORS= 
+
 CONTENTFUL_SPACE_ID=
 CONTENTFUL_CONTENT_API_KEY=
 CONTENTFUL_PREVIEW_API_KEY=
 CONTENTFUL_ENVIRONMENT_ID=
+
+YOUTUBE_API_KEY=
+
+ENABLE_CACHE=
