--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "~/*" : ["*"],
-      "~src/*" : ["src/*"],
+      "~src/*" : ["src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
