--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@contentful/rich-text-html-renderer": "^15.13.1",
+    "@contentful/rich-text-react-renderer": "^15.12.1",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
@@ -20,11 +21,13 @@
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.11",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@types/lodash": "^4.14.190",
     "axios": "^1.1.3",
     "contentful": "^9.2.9",
     "css-mediaquery": "^0.1.2",
     "googleapis": "^109.0.1",
     "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "memory-cache": "^0.2.0",
     "next": "13.0.0",
     "nextjs-cors": "^2.1.2",
