--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ CONTENTFUL_SPACE_ID=
 CONTENTFUL_CONTENT_API_KEY=
 CONTENTFUL_PREVIEW_API_KEY=
 CONTENTFUL_ENVIRONMENT_ID=
+CONTENTFUL_PERSONAL_ACCESS_TOKEN=
 
 YOUTUBE_API_KEY=
 
