--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,10 +20,26 @@
     "incremental": true,
     "baseUrl": "./",
     "paths": {
-      "~/*" : ["*"],
-      "~src/*" : ["src/*"]
+      "~/*": [
+        "*"
+      ],
+      "~src/*": [
+        "src/*"
+      ],
+      "~gqlConfig": [
+        "src/services/graphql/graphql.config.ts"
+      ],
+      "~gqlContentful": [
+        "src/services/graphql/contentful.graphql.ts"
+      ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
